--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.4",
     "cors-anywhere": "^0.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.5.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
